--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "centerline-flight-training",
   "type": "module",
   "version": "1.0.0",
+  "engines": {
+    "node": ">=18.20.0"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
